--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,8 @@ dependencies {
     debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     //testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
