--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ ext {
     junitVersion = '4.13.1'
     rx_binding_version = "0.4.0"
     retrofit_version = '2.9.0'
+    archTestingVersion = '2.1.0'
 }
 
 allprojects {
